# cautious-axela

./: .gitignore  README.md  connectBrowserAudio.sdp
backend/: .env  Cargo.toml  Dockerfile  Makefile
backend/src/common/: build.rs  device.rs  dispatch.rs  lib.rs  message.rs  request.rs  requests_and_responses.rs
backend/src/common/device/: door.rs  keypad.rs  nfc.rs  terminal.rs
frontend/: camera.html  config.html  index.html
frontend/js/: camera.js  index.js  main.js
frontend/stylesheets/: style.css
twilio-rust/: Cargo.toml
