[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "common"
path = "src/common/lib.rs"

[[bin]]
name = "server"
path = "src/bin/web/main.rs"

[[bin]]
name = "intercom"
path = "src/bin/intercom/main.rs"

[dependencies]
futures = { version = "0.3", default-features = false }
warp = "0.3.2"
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.6"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
uuid = { version = "*", features = ["v4"] }
webrtc = "0.4.0"
anyhow = "1.0.52"
chrono = "0.4.19"
log = "0.4.14"
