[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "common"
path = "src/common/lib.rs"

[[bin]]
name = "server"
path = "src/bin/web/main.rs"

[[bin]]
name = "intercom"
path = "src/bin/intercom/main.rs"

[dependencies]
warp = "0.2.1"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sysfs_gpio = "0.6"